fix: updated with new Google Analytics ID

--- a/_config.yml
+++ b/_config.yml
@@ -37,4 +37,4 @@ social-network-links:
   linkedin: computer.society.itba
   youtube: c/csitba
 
-google_analytics: G-14PLTKW0T1
+google_analytics: G-V0EKY8BH3B
