fix: _config.yml meta image

--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,13 @@ social-network-links:
   linkedin: computer.society.itba
   youtube: c/csitba
 
+
+defaults:
+  - scope:
+      path: ""
+    values:
+      image: /meta.png
+
 # SEO
 twitter:
   'twitter:username': '@GonzaloHirsch'
